--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   </header>
   <div id="principale">
-    <h1>c est de la faute a Chris et a Michel </h1>
+    <h1>MGS Team...</h1>
     <img src="./img/burn wip.png" alt="wip">
   </div>
 
