--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
       Une team ESport<br>
       <br>
       Mission :<br>
-      La mission de MotorsGameSimulation est de permettre de se détacher des systèmes compétitifs traditionnel a fin d’apporter un nouveau souffle pour celles et ceux qui désirent explorer une autre manière de faire et de voir la simulation automobile.<br>
+      La mission de MotorsGameSimulation est de permettre de se détacher des systèmes compétitifs traditionnel<br> afin d’apporter un nouveau souffle pour celles et ceux qui désirent explorer <br>une autre manière de faire et de voir la simulation automobile.<br>
       D’avoir toujours à porté de click une communauté soudée et prête à apporter son aide, ses conseils,<br>
       De partager à tout moment dans la bonne humeur et le respect.<br>
       <br>
       Valeurs :<br>
-      MGS est conscient et soucieux de proposer des solutions, pour œuvrer à la démocratisation de l’ESport dans le domaine du Simracing pour fédérer des valeurs humaines, et faire évoluer ensemble,<br>
+      MGS est conscient et soucieux de proposer des solutions, pour œuvrer à la démocratisation de l’ESport <br>dans le domaine du Simracing pour fédérer des valeurs humaines, et faire évoluer ensemble,<br>
       La vision de notre futur numérique.<br>
       </p>
     <img src="./img/burn wip.png" alt="wip">
