--- a/index.html
+++ b/index.html
@@ -33,12 +33,15 @@
       <li> <a href="pages/cammus.html" title="A découvrir !">
           Cammus </a>
       </li>
+      <li> <a href="pages/sim-plicity.html" title="A découvrir !">
+        Sim-Plicity </a>
+    </li>
     </menu>
 
   </header>
   <div id="principale">
     <h1>MGS Team...</h1>
-    <p>Produits :
+    <p>Produits :<br>
       Vidéos, tutoriels, créations, bricolages, conceptions et modélisations, prototypages, etc… <br>
        Concernant de près ou de loin le monde des nouvelles technologies, du Simracing, matériels, et divers périphériques.<br>
        <br>
