--- a/pages/sim-plicity.html
+++ b/pages/sim-plicity.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-  <header>
+    <header>
+      <img src="../img/bannieres.jpg" alt="">
     <h1>Sim-plicity Direct Drive </h1>
 
   </header>
