--- a/index.html
+++ b/index.html
@@ -10,20 +10,24 @@
   <title>MotorsGameSimulation</title>
 </head>
 
-<body id="pagehome">
+<body id="pageHome" >
 
   <header>
-    <h1>MotorsGameSimulator</h1>
     <nav>
-      <img src="./img/bannieres.jpg" alt="">
+      <h1> MotorsGameSimulation </h1>
+      <img src="./img/bannieres.jpg" alt="banniére">
       <h3>Pourquoi cette page alors qu'il en existe déjà des tonnes ?</h3>
       <p>Pour regrouper les infos que je partage et dont je me sers souvent aussi. <br>
         Donc pour ne pas aller chercher partout à chaque fois, <br>
         J'ai réuni ici ce dont j'ai besoin. </p>
     </nav>
-    <menu class="menu">
-      <li> <a href="pages/usb plug.html" title="Vous ne le regretterez pas !">
-          USB plug </a></li>
+    
+    <div id="option">
+
+      <menu class="menu">
+      <li> <a href="pages/usb plug.html" title="A découvrir !">
+          USB plug </a>
+        </li>
       <li> <a href="pages/thrustmaster.html" title="A découvrir !">
           Thrustmaster </a>
       </li>
@@ -37,6 +41,7 @@
         Sim-Plicity </a>
     </li>
     </menu>
+  </div>
 
   </header>
   <div id="principale">
@@ -60,7 +65,7 @@
       MGS est conscient et soucieux de proposer des solutions, pour œuvrer à la démocratisation de l’ESport <br>dans le domaine du Simracing pour fédérer des valeurs humaines, et faire évoluer ensemble,<br>
       La vision de notre futur numérique.<br>
       </p>
-    <img src="./img/burn wip.png" alt="wip">
+    <!-- <img src="./img/burn wip.png" alt="wip"> -->
   </div>
 
 
