--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
       <h1> MotorsGameSimulation </h1>
       <img src="./img/bannieres.jpg" alt="banniére">
       <h3>Pourquoi cette page alors qu'il en existe déjà des tonnes ?</h3>
-      <p>Pour regrouper les infos que je partage et dont je me sers souvent aussi. <br>
-        Donc pour ne pas aller chercher partout à chaque fois, <br>
-        J'ai réuni ici ce dont j'ai besoin. </p>
+<p>Pour regrouper les infos que je partage et dont je me sers souvent aussi. <br>
+   Donc pour ne pas aller chercher partout à chaque fois, j'ai réuni ici ce dont j'ai besoin.</p>
+
     </nav>
-    
+
     <div id="option">
 
       <menu class="menu">
@@ -47,23 +47,30 @@
   <div id="principale">
     <h1>MGS Team...</h1>
     <p>Produits :<br>
-      Vidéos, tutoriels, créations, bricolages, conceptions et modélisations, prototypages, etc… <br>
-       Concernant de près ou de loin le monde des nouvelles technologies, du Simracing, matériels, et divers périphériques.<br>
+      <br>
+      Vidéos, tutoriels, créations, bricolages, conceptions et modélisations, prototypages, etc... <br>
+       concernant de près ou de loin le monde des nouvelles technologies, du Simracing, matériels, et divers périphériques.
+       <br>
        <br>
       Vision de l’entreprise :<br>
-      MGS est une jeune marque Française, regroupant plusieurs thèmes tournant  autour du Simracing.<br>
+      MGMGS est une jeune marque française regroupant plusieurs thèmes tournant autour du Simracing.
+      <br>
       Une chaine YouTube<br>
       Un discord MGS<br>
       Une team ESport<br>
-      <br>
-      Mission :<br>
-      La mission de MotorsGameSimulation est de permettre de se détacher des systèmes compétitifs traditionnel<br> afin d’apporter un nouveau souffle pour celles et ceux qui désirent explorer <br>une autre manière de faire et de voir la simulation automobile.<br>
-      D’avoir toujours à porté de click une communauté soudée et prête à apporter son aide, ses conseils,<br>
-      De partager à tout moment dans la bonne humeur et le respect.<br>
-      <br>
-      Valeurs :<br>
-      MGS est conscient et soucieux de proposer des solutions, pour œuvrer à la démocratisation de l’ESport <br>dans le domaine du Simracing pour fédérer des valeurs humaines, et faire évoluer ensemble,<br>
-      La vision de notre futur numérique.<br>
+      
+      <p>Mission : <br>
+        <br>
+        La mission de MotorsGameSimulation est de permettre de se détacher des systèmes compétitifs traditionnels<br> 
+        afin d'apporter un nouveau souffle pour ceux qui désirent explorer une autre manière de faire et de voir la simulation automobile.<br>
+        Avoir toujours à portée de clic une communauté soudée et prête à apporter son aide et ses conseils,<br>
+        et de partager à tout moment dans la bonne humeur et le respect.</p>
+  
+        <p>Valeurs :<br>
+          <br>
+      MGS est conscient et soucieux de proposer des solutions pour œuvrer à la démocratisation de l'ESport dans le domaine du Simracing,<br>
+        afin de fédérer des valeurs humaines et faire évoluer ensemble la vision de notre futur numérique.</p>
+        <br>
       </p>
     <!-- <img src="./img/burn wip.png" alt="wip"> -->
   </div>
