--- a/pages/fanatec.html
+++ b/pages/fanatec.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1>espece 3 pitit dow !!</h1>
+  <h1>FANATEC</h1>
 
   <div id="intro">
     <p>Lien du site pour kit conversion <a
