--- a/pages/thrustmaster.html
+++ b/pages/thrustmaster.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1>espece 3 pitit dow !!</h1>
+  <h1>THRUSTMASTER</h1>
 
   <div id="intro">
     <p>Lien pour emuler <a href="https://rr-m.org/blog/thrustmaster-t300rs-steering-wheel-arduino-emulator/"
