--- a/pages/sim-plicity.html
+++ b/pages/sim-plicity.html
@@ -10,13 +10,17 @@
 
 <body>
     <header>
-      <img src="../img/bannieres.jpg" alt="">
+      <!-- <img src="../img/bannieres.jpg" alt=""> -->
     <h1>Sim-plicity Direct Drive </h1>
 
   </header>
   <div id="intro">
     <p>Lien du site <a href="https://sim-pli.city/"
-        style="color: rgb(18, 151, 36);" title="Mon ti GIT !" target="_blank">
+        style="color: rgb(18, 151, 36);" title="lien du site" target="_blank">
+        Sim-plicity </a> shop </p>
+
+        <p>Lien du forum <a href="https://forums.sim-pli.city/"
+        style="color: rgb(18, 151, 36);" title="lien du forum" target="_blank">
         Sim-plicity </a> shop </p>
   </div>
 
