--- a/pages/fanatec.html
+++ b/pages/fanatec.html
@@ -12,14 +12,24 @@
   <h1>FANATEC</h1>
 
   <div id="intro">
-    <p>Lien du site pour kit conversion <a
-        href="http://www.leobodnar.com/shop/index.php?main_page=product_info&cPath=97&products_id=236"
+    <!-- <p>Lien du site pour kit conversion 
+      <a href="http://www.leobodnar.com/shop/index.php?main_page=product_info&cPath=97&products_id=236"
         style="color: rgb(18, 151, 36);" title="Mon ti GIT !" target="_blank">
         Fanatec </a> sur LeoBodnar</p>
     <p>Lien du site pour kit conversion <a
         href="http://www.leobodnar.com/shop/index.php?main_page=product_info&cPath=97&products_id=236"
         style="color: rgb(18, 151, 36);" title="Mon ti GIT !" target="_blank">
-        Fanatec </a> sur SRM</p>
+        Fanatec </a> sur SRM</p> -->
+
+        <li>Lien du site pour kit conversion <a href="http://www.leobodnar.com/shop/index.php?main_page=product_info&cPath=97&products_id=236" title="lien!" style="color: rgb(18, 151, 36);" >
+          Fanatec </a>
+          </a> sur LeoBodnar
+        </li>
+
+        <li>Lien du site pour kit conversion <a href="http://www.leobodnar.com/shop/index.php?main_page=product_info&cPath=97&products_id=236"" title="lien!" style="color: rgb(18, 151, 36);" >
+          SRM </a>
+          </a> sur LeoBodnar
+        </li>
 
   </div>
 </body>
