--- a/pages/sim-plicity.html
+++ b/pages/sim-plicity.html
@@ -15,13 +15,23 @@
 
   </header>
   <div id="intro">
-    <p>Lien du site <a href="https://sim-pli.city/"
+    <!-- <p>Lien du site <a href="https://sim-pli.city/"
         style="color: rgb(18, 151, 36);" title="lien du site" target="_blank">
         Sim-plicity </a> shop </p>
 
         <p>Lien du forum <a href="https://forums.sim-pli.city/"
         style="color: rgb(18, 151, 36);" title="lien du forum" target="_blank">
-        Sim-plicity </a> shop </p>
+        Sim-plicity </a> shop </p> -->
+
+        <li>Lien du site <a href="https://sim-pli.city/" title="lien!" style="color: rgb(18, 151, 36);" >
+          Sim-plicity </a>
+          </a> 
+        </li>
+
+        <li>Lien du forum <a href="https://forums.sim-pli.city/" title="lien!" style="color: rgb(18, 151, 36);" >
+          Sim-plicity </a>
+          </a> 
+        </li>
   </div>
 
 </body>
