--- a/pages/thrustmaster.html
+++ b/pages/thrustmaster.html
@@ -12,10 +12,14 @@
   <h1>THRUSTMASTER</h1>
 
   <div id="intro">
-    <p>Lien pour emuler <a href="https://rr-m.org/blog/thrustmaster-t300rs-steering-wheel-arduino-emulator/"
+    <!-- <li>Lien pour emuler <a href="https://rr-m.org/blog/thrustmaster-t300rs-steering-wheel-arduino-emulator/"
         style="color: rgb(18, 151, 36);" title="Mon ti GIT !" target="_blank">
-        thrustmaster </a> sur My techy life</p>
-  </div>
+        thrustmaster </a> sur My techy life</li> -->
+        <li>Lien pour emuler <a href="https://rr-m.org/blog/thrustmaster-t300rs-steering-wheel-arduino-emulator/" title="lien!" style="color: rgb(18, 151, 36);" >
+          Thrustmaster </a>
+          </a> sur My techy life
+        </li>
+      </div>
 </body>
 
 </html>
