--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       <li> <a href="pages/fanatec.html" " title=" A découvrir !">
           Fanatec </a>
       </li>
-      <li> <a href="pages/cammus.html" title="A découvrir !">
+      <!-- <li> <a href="pages/cammus.html" title="A découvrir !">
           Cammus </a>
-      </li>
+      </li> -->
       <li> <a href="pages/sim-plicity.html" title="A découvrir !">
         Sim-Plicity </a>
     </li>
