--- a/pages/usb plug.html
+++ b/pages/usb plug.html
@@ -12,9 +12,14 @@
   <h1>Wheel and BoutonBox</h1>
   <div id="intro">
 
-    <p>Lien pour schéma matrice bouton <a href="https://www.youtube.com/watch?v=Z7Sc4MJ8RPM"
+    <!-- <p>Lien pour schéma matrice bouton <a href="https://www.youtube.com/watch?v=Z7Sc4MJ8RPM"
         style="color: rgb(18, 151, 36);" title="Mon ti GIT !" target="_blank">
-        DIY </a> sur Youtube My AmStudio</p>
+        DIY </a> sur Youtube My AmStudio</p> -->
+
+        <li>Lien pour schéma matrice bouton <a href="https://www.youtube.com/watch?v=Z7Sc4MJ8RPM" title="lien!" style="color: rgb(18, 151, 36);" >
+          AmStudio </a>
+          </a> sur Youtube
+        </li>
   </div>
 </body>
 
