--- a/pages/fanatec.html
+++ b/pages/fanatec.html
@@ -12,6 +12,7 @@
   <h1>FANATEC</h1>
 
   <div id="intro">
+    <ul>
     <!-- <p>Lien du site pour kit conversion 
       <a href="http://www.leobodnar.com/shop/index.php?main_page=product_info&cPath=97&products_id=236"
         style="color: rgb(18, 151, 36);" title="Mon ti GIT !" target="_blank">
@@ -21,16 +22,18 @@
         style="color: rgb(18, 151, 36);" title="Mon ti GIT !" target="_blank">
         Fanatec </a> sur SRM</p> -->
 
-        <li>Lien du site pour kit conversion <a href="http://www.leobodnar.com/shop/index.php?main_page=product_info&cPath=97&products_id=236" title="lien!" style="color: rgb(18, 151, 36);" >
+        <li>Lien du site pour kit conversion 
+          <a href="http://www.leobodnar.com/shop/index.php?main_page=product_info&cPath=97&products_id=236" title="lien!" style="color: rgb(18, 151, 36);" >
           Fanatec </a>
           </a> sur LeoBodnar
         </li>
 
-        <li>Lien du site pour kit conversion <a href="http://www.leobodnar.com/shop/index.php?main_page=product_info&cPath=97&products_id=236"" title="lien!" style="color: rgb(18, 151, 36);" >
+        <li>Lien du site pour kit conversion 
+          <a href="http://www.leobodnar.com/shop/index.php?main_page=product_info&cPath=97&products_id=236"" title="lien!" style="color: rgb(18, 151, 36);" >
           SRM </a>
           </a> sur LeoBodnar
         </li>
-
+      </ul>
   </div>
 </body>
 
