--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
        <br>
        <br>
       Vision de l’entreprise :<br>
-      MGMGS est une jeune marque française regroupant plusieurs thèmes tournant autour du Simracing.
+      MGS est une jeune marque française regroupant plusieurs thèmes tournant autour du Simracing.
       <br>
       Une chaine YouTube<br>
       Un discord MGS<br>
