--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       Un discord MGS<br>
       Une team ESport<br>
       
-      <p>Mission : <br>
+      <!-- <p>Mission : <br>
         <br>
         La mission de MotorsGameSimulation est de permettre de se détacher des systèmes compétitifs traditionnels<br> 
         afin d'apporter un nouveau souffle pour ceux qui désirent explorer une autre manière de faire et de voir la simulation automobile.<br>
@@ -69,7 +69,7 @@
       MGS est conscient et soucieux de proposer des solutions pour œuvrer à la démocratisation de l'ESport dans le domaine du Simracing,<br>
         afin de fédérer des valeurs humaines et faire évoluer ensemble la vision de notre futur numérique.</p>
         <br>
-      </p>
+      </p> -->
     <!-- <img src="./img/burn wip.png" alt="wip"> -->
   </div>
 
