--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
     <nav>
       <h1> MotorsGameSimulation </h1>
-      <img src="./img/bannieres.jpg" alt="banniére">
+      <img src="./img/banniere linkedin.png" alt="banniere">
       <h3>Pourquoi cette page alors qu'il en existe déjà des tonnes ?</h3>
 <p>Pour regrouper les infos que je partage et dont je me sers souvent aussi. <br>
    Donc pour ne pas aller chercher partout à chaque fois, j'ai réuni ici ce dont j'ai besoin.</p>
