--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   </header>
   <div id="principale">
-    <h1>MGS Team...</h1>
+    <h1>MGS ...</h1>
     <p> <br>
       <br>
       Vidéos, tutoriels, créations, bricolages, conceptions et modélisations, prototypages, etc... <br>
